plugins {
    id 'java'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'server.Server'
        )
    }
}

group 'mbdebbeler'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    maven { url 'http://repo1.maven.org/maven2' }
    jcenter { url "http://jcenter.bintray.com/" }
}

dependencies {
    testCompile 'junit:junit:4.12'
}
